# ThesisPrototype

./: CMakeLists.txt  cosh_lut.cpp  coshlut.py  tanh_lut.cpp  tanhlut.py
.VSCodeCounter/2023-11-18_19-46-43/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
include/Strategy/: decide_position.hpp  shoot_at_goal.hpp
include/advanced_math/: advanced_math.hpp
include/logger/: logger.hpp
include/math/: new_vec_attr.hpp  new_vec_repl.hpp  trigonom.hpp  vec_attr.hpp  vec_repl.hpp
include/simple_example/: game_algorithm.hpp  machine_state.hpp  main.hpp  main_game.hpp  positioning.hpp  static_game.hpp
include/simple_example/final/: attack_double.hpp  attack_single.hpp  defend_double.hpp  defend_single.hpp  pid.h  robot_motion.hpp
include/utils/: entity.hpp  pid.h  timer.hpp  track_keyboard.hpp  utils.hpp
src/: line_circle_interception.cpp  machine_state.cpp  main.cpp  main_game.cpp  positioning.cpp  static_game.cpp  test.cpp
src/final/: attack_double.cpp  attack_single.cpp  convert_matlab_to_cpp.cpp  defend_double.cpp  defend_single.cpp  robot_motion.cpp
